Redirect to merch store, fix footer, and package updates (#40)
* Fix white space at bottom

* Add redirect to merch store, npm adjustments

* Prettified Code!

--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -7,6 +7,7 @@
 .App {
   overflow: hidden;
   background-color: $white;
+  margin-bottom: -30px; // FIXME
 }
 
 /* prettier-ignore */
@@ -79,7 +80,3 @@ a {
     text-decoration: none;
   }
 }
-
-// button {
-//   @include button-generic();
-// }
